2010-01-24 Borut Razem <borut.razem AT siol.net>

	* src/z80/gen.c:
	  fixed declaration in the middle of the block
	* support/cpp/ansidecl.h, support/cpp/libcpp/directives.c,
	  support/cpp/libcpp/errors.c, support/cpp/libcpp/init.c,
	  support/cpp/libcpp/internal.h, support/cpp/libcpp/lex.c,
	  support/cpp/libiberty.h, support/cpp/libiberty/hex.c,
	  support/cpp/libiberty/md5.c, support/cpp/libiberty/splay-tree.c,
	  support/cpp/md5.h:
	  SDCPP synchronized with GCC CPP release version 4.4.3

2010-01-24 Philipp Klaus Krause <pkk AT spth.de>
	* src/SDCCcse.c,
	  src/SDCCval.c,
	  src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/SDCC.y,
	  src/SDCCdwarf2.c,
	  src/SDCCglue.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  src/SDCCglobl.h,
	  src/SDCC.lex,
	  src/SDCCast.c,
	  device/include/stdbool.h,
	  support/regression/tests/bug1546986.c,
	  support/regression/tests/constantRange.c,
	  support/regression/tests/bug2805333.c,
	  support/regression/tests/bug1337835.c,
	  support/regression/tests/bitopcse.c,
	  support/regression/tests/bug1723128.c,
	  support/regression/tests/bug-908454.c,
	  support/regression/tests/bug1734654.c,
	  support/regression/tests/bug1745717.c,
	  support/regression/tests/bug2719592.c,
	  support/regression/tests/bug1738367.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/bug1509084.c,
	  support/regression/tests/bug1788177.c,
	  support/regression/tests/bitvars.c:
	  Finally implemented true _Bool support.
	* src/SDCCpeeph.c,
	  doc/random-notes.txt:
	  Generic cleanup.

2010-01-24 Borut Razem <borut.razem AT siol.net>

	* sdas/as8051/i51adr.c, sdas/as8051/i51pst.c, sdas/asz80/z80pst.c,
	  sdas/asz80/z80adr.c, sdas/linksrc/lkdata.c, sdas/linksrc/lkmain.c,
	  sdas/linksrc/aslink.h, sdas/as6808/m08adr.c, sdas/as6808/m08pst.c,
	  sdas/asxxsrc/asmain.c, sdas/asxxsrc/asxxxx.h, sdas/asxxsrc/aslex.c,
	  sdas/asxxsrc/asdata.c, sdas/asgb/gbadr.c, sdas/asgb/gbpst.c: