@@ -27,14 +27,14 @@
 #if defined (SDCC_hc08) || defined (SDCC_pic14) || defined (SDCC_pic16)
  /* The ports that don't have anything worthy of being bool */
  #define BOOL char
- #define __SDCC__WEIRD_BOOL 1
+ #define __SDCC_WEIRD_BOOL 1
 #elif defined (SDCC_ds390) || defined (SDCC_mcs51) || defined (SDCC_xa51)
  /* The ports that have __bit and use it as an imperfect substitute for bool */
  #define _Bool __bit
  #define BOOL  __bit
  #define bool  _Bool
  #define __bool_true_false_are_defined 1
- #define __SDCC__WEIRD_BOOL 1
+ #define __SDCC_WEIRD_BOOL 1
 #else
  /* The ports that have bool */
  #define bool _Bool
